---
source: crates/tlang_parser/tests/parser_types.rs
expression: "parse! (\"let x: i64 = 1;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 6,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: LineColumn(
                line: 0,
                column: 4,
              ),
              end: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 4,
            ),
            end: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 5,
          kind: Literal(UnsignedInteger(1)),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 13,
            ),
            end: LineColumn(
              line: 0,
              column: 14,
            ),
          ),
        ),
        type_annotation: Some(Ty(
          id: 4,
          kind: Path(Path(
            segments: [
              Ident(
                name: "i64",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                ),
              ),
            ],
            res: Res(
              node_id: None,
            ),
            span: Span(
              start: LineColumn(
                line: 0,
                column: 7,
              ),
              end: LineColumn(
                line: 0,
                column: 10,
              ),
            ),
          )),
          parameters: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 0,
            ),
            end: LineColumn(
              line: 0,
              column: 0,
            ),
          ),
        )),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 15,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 15,
    ),
  ),
)
